wip: decoding of strings and some refactor

--- a/TODO
+++ b/TODO
@@ -1,2 +1,5 @@
-- analyze lastTail concept in ErlList (all of them?), from
-  jinterface/java_src/com/ericsson/otp/erlang/OtpErlangList.java
+- remove abstract ErlTerm methods: size, isTrue, isFalse
+
+  - move isTrue and isFalse to ErlAtom
+  - include arity in tuple and list classes
+  - include length in string, atom and binary classes
